RESOLVED FIXED266597
REGRESSION(272224@main): [Win] ERROR: Received an invalid message 'GPUConnectionToWebProcess_CreateRenderingBackend' from WebContent process 10, requesting for it to be terminated.
https://bugs.webkit.org/show_bug.cgi?id=266597
Summary REGRESSION(272224@main): [Win] ERROR: Received an invalid message 'GPUConnect...
Fujii Hironori
Reported 2023-12-18 13:38:15 PST
I'm observing a random crash by running layout tests. > python .\Tools\Scripts\run-webkit-tests --debug --no-retry fast/css/001.html --iter=10 --run-s [1/10] fast/css/001.html passed [2/10] fast/css/001.html passed [3/10] fast/css/001.html passed [4/10] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=412248]) [5/10] fast/css/001.html passed [6/10] fast/css/001.html passed [7/10] fast/css/001.html passed [8/10] fast/css/001.html failed unexpectedly (WebKitTestRunner crashed [pid=416704]) [9/10] fast/css/001.html passed [10/10] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=419436]) stderr: ERROR: Received an invalid message 'GPUConnectionToWebProcess_CreateRenderingBackend' from WebContent process 10, requesting for it to be terminated. C:\PSDEV\gc\Source\WebKit\GPUProcess/GPUConnectionToWebProcess.cpp(506) : didReceiveInvalidMessage ERROR: 0000025D622393B0 - [PID=419436] WebProcessProxy::requestTermination: reason=9 C:\PSDEV\gc\Source\WebKit\UIProcess/WebProcessProxy.cpp(1545) : requestTermination ERROR: 0000025D622393B0 - [PID=419436] WebProcessProxy::processDidTerminateOrFailedToLaunch: reason=RequestedByGPUProcess C:\PSDEV\gc\Source\WebKit\UIProcess/WebProcessProxy.cpp(1103) : processDidTerminateOrFailedToLaunch ERROR: 0000025D1CF89060 - [pageProxyID=7, webPageID=8, PID=419436] WebPageProxy::processDidTerminate: (pid 419436), reason=RequestedByGPUProcess C:\PSDEV\gc\Source\WebKit\UIProcess/WebPageProxy.cpp(9267) : resetStateAfterProcessTermination ERROR: 0000025D1CF89060 - [pageProxyID=7, webPageID=8, PID=419436] WebPageProxy::dispatchProcessDidTerminate: reason=RequestedByGPUProcess C:\PSDEV\gc\Source\WebKit\UIProcess/WebPageProxy.cpp(9325) : dispatchProcessDidTerminate WebProcess terminated (pid 419436) for reason: crash
Attachments
Fujii Hironori
Comment 1 2023-12-18 13:41:02 PST
This is likely my bug. I changed the timing of CreateRenderingBackend in 272141@main (bug#266329).
Fujii Hironori
Comment 2 2023-12-18 17:54:08 PST
WinCairo-64-bit-Debug-Tests is crashing Buildbot: builder WinCairo-64-bit-Debug-Tests build 21516 : 272235@main https://build.webkit.org/#/builders/727/builds/21516 272235@main first bad 272218@main last good
Fujii Hironori
Comment 3 2023-12-18 18:13:55 PST
EWS
Comment 4 2023-12-18 18:17:39 PST
Committed 272247@main (6e291227dab7): <https://commits.webkit.org/272247@main> Reviewed commits have been landed. Closing PR #22004 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2023-12-18 18:18:15 PST
Note You need to log in before you can comment on or make changes to this bug.