REGRESSION(272224@main): [Win] ERROR: Received an invalid message 'GPUConnectionToWebProcess_CreateRenderingBackend' from WebContent process 10, requesting for it to be terminated. https://bugs.webkit.org/show_bug.cgi?id=266597

Unreviewed crash fix for Windows port.

After 272224@main changed DrawingArea creation time,
RemoteImageBufferSetProxy wasn't properly constructed in DrawingAreaWC
constructor. Creating a RemoteImageBufferSetProxy should be deferred.

* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:

Canonical link: https://commits.webkit.org/272247@main